--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@nuxtjs/google-fonts": "^3.2.0",
     "@nuxtjs/i18n": "^9.5.6",
     "@pinia/nuxt": "^0.9.0",
+    "axios": "^1.13.2",
     "date-fns": "^4.1.0",
     "js-md5": "^0.8.3",
     "lodash-es": "^4.17.21",
@@ -26,8 +27,9 @@
   },
   "packageManager": "pnpm@9.12.2+sha512.22721b3a11f81661ae1ec68ce1a7b879425a1ca5b991c975b074ac220b187ce56c708fe5db69f4c962c989452eee76c82877f4ee80f474cebd61ee13461b6228",
   "devDependencies": {
+    "@openapitools/openapi-generator-cli": "^2.27.0",
     "@types/lodash-es": "^4.17.12",
-    "@unocss/nuxt": "^65.5.0",
+    "@unocss/nuxt": "^66.6.0",
     "@unocss/postcss": "^65.5.0",
     "postcss": "^8.5.6",
     "postcss-nested": "^7.0.2",
