--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
     "format": "prettier --write .",
-    "format:check": "prettier --check ."
+    "format:check": "prettier --check .",
+    "gen:api": "openapi-generator-cli generate -i https://25560.wu.elitepro.ltd/swagger/doc.json -g typescript-axios -o ./api"
   },
   "dependencies": {
     "@nuxt/image": "^1.11.0",
